--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-	"name": "npm-package-boilerplate",
+	"name": "tracking-manager",
 	"version": "1.0.0",
-	"description": "Boilerplate to kickstart creating a npm package",
-	"homepage": "https://github.com/yoriiis/npm-package-boilerplate",
-	"bugs": "https://github.com/yoriiis/npm-package-boilerplate/issues",
-	"repository": "https://github.com/yoriiis/npm-package-boilerplate.git",
+	"description": "Tracking Manager allows to manage all your Google Analytics events directly in HTML or Javascript with a simple and extensible configuration and public functions to track events with dynamic variables",
+	"keywords": [
+		"tracking",
+		"google-analytics",
+		"tracking-manager",
+		"track-event",
+		"track-page-view"
+	],
+	"homepage": "https://github.com/yoriiis/tracking-manager",
+	"bugs": "https://github.com/yoriiis/tracking-manager/issues",
+	"repository": "https://github.com/yoriiis/tracking-manager.git",
 	"license": "MIT",
 	"author": "Yoriiis aka Joris DANIEL",
 	"main": "src/index.js",
-	"keywords": [
-		"boilerplate",
-		"npm",
-		"npm package"
-	],
 	"scripts": {
-		"coverage": "npm run test:coverage && cat ./coverage/lcov.info | coveralls",
-		"test": "jest",
-		"test:coverage": "jest --coverage",
 		"test:eslint": "eslint -c ./.eslintrc.js .",
-		"test:markdown": "markdownlint '**/*.md' --ignore node_modules",
-		"test:watch": "jest --watch --coverage"
+		"test:markdown": "markdownlint '**/*.md' --ignore node_modules"
 	},
 	"devDependencies": {
 		"@babel/preset-env": "7.8.3",
 		"babel-eslint": "10.0.3",
-		"babel-plugin-dynamic-import-node": "2.3.0",
 		"coveralls": "3.0.9",
 		"eslint": "6.8.0",
 		"eslint-config-standard": "14.1.0",
@@ -32,7 +29,6 @@
 		"eslint-plugin-node": "11.0.0",
 		"eslint-plugin-promise": "4.2.1",
 		"eslint-plugin-standard": "4.0.1",
-		"jest": "25.1.0",
 		"markdownlint-cli": "0.21.0",
 		"prettier-eslint": "9.0.1"
 	},
