--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"test:coverage": "jest --coverage",
 		"test:eslint": "eslint -c ./.eslintrc.js .",
 		"test:markdown": "markdownlint '**/*.md' --ignore node_modules",
-		"test:watch": "jest --watch --coverage"
+		"test:watch": "jest --watchAll --coverage"
 	},
 	"devDependencies": {
 		"@babel/preset-env": "7.8.3",
