--- a/package.json
+++ b/package.json
@@ -23,20 +23,39 @@
 		"test:markdown": "markdownlint '**/*.md' --ignore node_modules",
 		"test:watch": "jest --watchAll --coverage"
 	},
+	"prettier": {
+		"arrowParens": "always",
+		"printWidth": 100,
+		"semi": true,
+		"singleQuote": true,
+		"trailingComma": "none",
+		"useTabs": true,
+		"overrides": [
+			{
+				"files": "*.md",
+				"options": {
+					"proseWrap": "preserve",
+					"singleQuote": true,
+					"tabWidth": 2,
+					"useTabs": false
+				}
+			}
+		]
+	},
 	"devDependencies": {
-		"@babel/preset-env": "7.8.3",
-		"babel-eslint": "10.0.3",
-		"babel-plugin-dynamic-import-node": "2.3.0",
-		"coveralls": "3.0.9",
-		"eslint": "6.8.0",
-		"eslint-config-standard": "14.1.0",
-		"eslint-plugin-import": "2.20.0",
-		"eslint-plugin-node": "11.0.0",
+		"@babel/preset-env": "7.12.10",
+		"babel-eslint": "10.1.0",
+		"babel-plugin-dynamic-import-node": "2.3.3",
+		"coveralls": "3.1.0",
+		"eslint": "7.15.0",
+		"eslint-config-standard": "16.0.2",
+		"eslint-plugin-import": "2.22.1",
+		"eslint-plugin-node": "11.1.0",
 		"eslint-plugin-promise": "4.2.1",
-		"eslint-plugin-standard": "4.0.1",
-		"jest": "25.1.0",
-		"markdownlint-cli": "0.21.0",
-		"prettier-eslint": "9.0.1"
+		"eslint-plugin-standard": "5.0.0",
+		"jest": "26.6.3",
+		"markdownlint-cli": "0.25.0",
+		"prettier-eslint": "12.0.0"
 	},
 	"engines": {
 		"node": ">=8.11.2"
