--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
 		"types"
 	],
 	"scripts": {
-		"build": "echo \"No build specified\" && exit 0",
-		"test": "npm run test:markdown && npm run test:eslint && npm run test:unit",
-		"test:eslint": "eslint ./src ./config --config ./config/.eslintrc.cjs --ignore-pattern dist",
+		"build": "rm -rf ./types ./lib && tsc",
+		"dev": "tsc --watch",
+		"test": "npm run test:markdown && npm run test:eslint && npm run test:unit && npm run test:types",
+		"test:eslint": "eslint ./src ./config --config ./config/.eslintrc.cjs --ignore-pattern lib --ignore-pattern types",
 		"test:markdown": "markdownlint-cli2 '**/*.md' '.github/*.md'",
 		"test:unit": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config config/jest.config.js --verbose --coverage",
 		"test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config config/jest.config.js --watchAll --coverage"
@@ -31,8 +32,9 @@
 	"prettier": "./config/prettier.config.cjs",
 	"devDependencies": {
 		"@babel/core": "^7.22.1",
-		"@babel/eslint-parser": "^7.21.8",
 		"@babel/preset-env": "^7.22.2",
+		"@typescript-eslint/eslint-plugin": "^5.59.5",
+		"@typescript-eslint/parser": "^5.59.5",
 		"coveralls": "^3.1.1",
 		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
@@ -46,6 +48,7 @@
 		"jest-environment-jsdom": "^29.5.0",
 		"markdownlint-cli2": "^0.7.1",
 		"prettier": "^2.8.7",
+		"ts-jest": "^29.1.0",
 		"typescript": "^5.0.4"
 	},
 	"engines": {
